--- a/src/index.pug
+++ b/src/index.pug
@@ -35,13 +35,13 @@ html(lang="ru")
                         .col-9.col-sm-12.col-md-7.col-lg-8
                             .slider.slider_logo
                                 .slider__item
-                                    img.img-fluid(src="../img/RT_full_logo.png")
+                                    img.img-fluid(data-lazy="../img/RT_full_logo.png")
                                 .slider__item
-                                    img.img-fluid(src="../img/logo.png")
+                                    img.img-fluid(data-lazy="../img/logo.png")
                                 .slider__item
-                                    img.img-fluid(src="../img/transmash_logo.png")
+                                    img.img-fluid(data-lazy="../img/transmash_logo.png")
                                 .slider__item
-                                    img.img-fluid(src="../img/rzd.jpg")
+                                    img.img-fluid(data-lazy="../img/rzd.jpg")
             section.block-service
                 .container
                     .row.no-gutters
@@ -50,29 +50,36 @@ html(lang="ru")
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_first-child
                                 .service__title Сетевая инфраструктура
+                                .service__info ?
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide
                                 .service__title Унифицированные коммуникации
+                                .service__info ?
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn
                                 .service__title IT-решения
+                                .service__info ?
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Комплексные системы мониторинга и&nbsp;анализа
+                                .service__info ?
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Проектирование и модернизация 
                                     span.text-nowrap IT-инфраструктуры
+                                .service__info ?
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bt-hide
                                 .service__title Управление комплексными проектами
+                                .service__info ?
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Сервисная поддержка
+                                .service__info ?
                         .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Проектирование и&nbsp;модернизация инженерной инфраструктуры ЦОД
-                                .service__content
+                                .service__info ?
             section.block-content
                 .container
                     .row.align-items-center
