--- a/src/css/_framework.scss
+++ b/src/css/_framework.scss
@@ -13,14 +13,14 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6{
     font-weight: 600;
     line-height: 1.1;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 * + h1, * + h2, * + h3, * + h4, * + h5, * + h6,
 * + .h1, * + .h2, * + .h3, * + .h4, * + .h5, * + .h6{
-    margin-top: 1.5rem;
+    margin-top: 2.75rem;
 }
 .h1,h1{font-size: 2.75rem;}
-.h2,h2{font-size: 2.5rem;}
+.h2,h2{font-size: 2.25rem;}
 .h3,h3{font-size: 2rem;}
 .h4,h4{font-size: 1.75rem;}
 .h5,h5{font-size: 1.5rem;}
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6,
 p {
     font-size: 1rem;
     margin-top: 0;
-    margin-bottom: 1rem;
+    margin-bottom: 1.25rem;
     line-height: 1.6;
     &.small{
         font-size: .9em;
@@ -92,6 +92,11 @@ a{
 .text-center{text-align: center;}
 .text-left{text-align: left;}
 
+img{
+    max-width: 100%;
+    height: auto;
+}
+
 .img-fluid{
     display: block;
     height: auto;
@@ -110,24 +115,24 @@ a{
     color: $dark-blue;
 }
 
-.mt-0{margin-top: 0px;}
-.mt-20{margin-top: 20px;}
-.mt-40{margin-top: 40px;}
+.mt-0{margin-top: 0px!important;}
+.mt-20{margin-top: 20px!important;}
+.mt-40{margin-top: 40px!important;}
 
-.mb-0{margin-bottom: 0px;}
-.mb-20{margin-bottom: 20px;}
-.mb-40{margin-bottom: 40px;}
+.mb-0{margin-bottom: 0px!important;}
+.mb-20{margin-bottom: 20px!important;}
+.mb-40{margin-bottom: 40px!important;}
 
-.mr-0{margin-right: 0}
-.ml-0{margin-left: 0}
+.mr-0{margin-right: 0!important;}
+.ml-0{margin-left: 0!important;}
 
-.pt-0{padding-top: 0px;}
-.pt-20{padding-top: 20px;}
-.pt-40{padding-top: 40px;}
+.pt-0{padding-top: 0px!important;}
+.pt-20{padding-top: 20px!important;}
+.pt-40{padding-top: 40px!important;}
 
-.pb-0{padding-bottom: 0px;}
-.pb-20{padding-bottom: 20px;}
-.pb-40{padding-bottom: 40px;}
+.pb-0{padding-bottom: 0px!important;}
+.pb-20{padding-bottom: 20px!important;}
+.pb-40{padding-bottom: 40px!important;}
 
 .bg-gradient{
     background:  linear-gradient(247.85deg, #0FB5BF 1.5%, #004E96 100%);
@@ -172,16 +177,16 @@ table, .table{
 @media all and (max-width: map-get($grid-breakpoints, 'xl')){
     .d-xl-none{display: none;}
 
-    .mt-xl-0{margin-top: 0px;}
-    .mt-xl-20{margin-top: 20px;}
-    .mt-xl-40{margin-top: 40px;}
+    .mt-xl-0{margin-top: 0px!important;}
+    .mt-xl-20{margin-top: 20px!important;}
+    .mt-xl-40{margin-top: 40px!important;}
 
-    .mb-xl-0{margin-bottom: 0px;}
-    .mb-xl-20{margin-bottom: 20px;}
-    .mb-xl-40{margin-bottom: 40px;}
+    .mb-xl-0{margin-bottom: 0px!important;}
+    .mb-xl-20{margin-bottom: 20px!important;}
+    .mb-xl-40{margin-bottom: 40px!important;}
 	
-    .mr-xl-0{margin-right: 0}
-    .ml-xl-0{margin-left: 0}
+    .mr-xl-0{margin-right: 0!important;}
+    .ml-xl-0{margin-left: 0!important}
 
     .text-xl-left{text-align: left;}
     .text-xl-center{text-align: center;}
@@ -190,16 +195,16 @@ table, .table{
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
     .d-lg-none{display: none;}
 
-    .mt-lg-0{margin-top: 0px;}
-    .mt-lg-20{margin-top: 20px;}
-    .mt-lg-40{margin-top: 40px;}
+    .mt-lg-0{margin-top: 0px!important;}
+    .mt-lg-20{margin-top: 20px!important;}
+    .mt-lg-40{margin-top: 40px!important;}
 
-    .mb-lg-0{margin-bottom: 0px;}
-    .mb-lg-20{margin-bottom: 20px;}
-    .mb-lg-40{margin-bottom: 40px;}
+    .mb-lg-0{margin-bottom: 0px!important;}
+    .mb-lg-20{margin-bottom: 20px!important;}
+    .mb-lg-40{margin-bottom: 40px!important;}
 	
-    .mr-lg-0{margin-right: 0}
-    .ml-lg-0{margin-left: 0}
+    .mr-lg-0{margin-right: 0!important;}
+    .ml-lg-0{margin-left: 0!important;}
 
     .text-lg-left{text-align: left;}
     .text-lg-center{text-align: center;}
@@ -208,16 +213,16 @@ table, .table{
 @media all and (max-width: map-get($grid-breakpoints, 'md')){
     .d-md-none{display: none;}
     
-    .mt-md-0{margin-top: 0px;}
-    .mt-md-20{margin-top: 20px;}
-    .mt-md-40{margin-top: 40px;}
+    .mt-md-0{margin-top: 0px!important;}
+    .mt-md-20{margin-top: 20px!important;}
+    .mt-md-40{margin-top: 40px!important;}
 
-    .mb-md-0{margin-bottom: 0px;}
-    .mb-md-20{margin-bottom: 20px;}
-    .mb-md-40{margin-bottom: 40px;}
+    .mb-md-0{margin-bottom: 0px!important;}
+    .mb-md-20{margin-bottom: 20px!important;}
+    .mb-md-40{margin-bottom: 40px!important;}
 	
-    .mr-md-0{margin-right: 0}
-    .ml-md-0{margin-left: 0}
+    .mr-md-0{margin-right: 0!important;}
+    .ml-md-0{margin-left: 0!important;}
 
     
     .text-md-left{text-align: left;}
@@ -237,14 +242,22 @@ table, .table{
     .text-sm-center{text-align: center;}
     .text-sm-right{text-align: right;}
 
-    .mt-sm-0{margin-top: 0;}
-    .mt-sm-20{margin-top: 20px;}
-    .mt-sm-40{margin-top: 40px;}
+    .mt-sm-0{margin-top: 0px!important;}
+    .mt-sm-20{margin-top: 20px!important;}
+    .mt-sm-40{margin-top: 40px!important;}
 
-    .mb-sm-0{margin-bottom: 0px;}
-    .mb-sm-20{margin-bottom: 20px;}
-    .mb-sm-40{margin-bottom: 40px;}
+    .mb-sm-0{margin-bottom: 0px!important;}
+    .mb-sm-20{margin-bottom: 20px!important;}
+    .mb-sm-40{margin-bottom: 40px!important;}
 
-    .mr-sm-0{margin-right: 0}
-    .ml-sm-0{margin-left: 0}
+    .mr-sm-0{margin-right: 0!important;}
+    .ml-sm-0{margin-left: 0!important;}
+
+    // table, .table{
+    //     th, td{
+    //         display: table-cell;
+    //         float: left;
+    //         width: 100% !important;
+    //     }
+    // }
 }
