--- a/src/css/item/_service.scss
+++ b/src/css/item/_service.scss
@@ -77,6 +77,24 @@
             z-index: 2;
             transition: .4s;
         }
+        .service__info{
+            position: absolute;
+            top: 12px;
+            right: 12px;
+            z-index: 11;
+            background: $light-grey;
+            color: $white;
+            font-size: 10px;
+            font-weight: bold;
+            line-height: 18px;
+            width: 18px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 100%;
+            transition: .4s;
+
+            opacity: 0;
+        }
         &:after{
             position: absolute;
             content:'';
@@ -91,8 +109,11 @@
             transition: .3s;
         }
         &:hover{
+            text-decoration: none;
+            cursor: pointer;
             .service__title{
                 color: $white;
+                text-decoration: none;
             }
             &:after{
                 opacity: 1;
@@ -181,6 +202,9 @@
         }
         &_modal-btn{
             padding: 20px 40px;
+            .service__info{
+                opacity: 1;
+            }
         }
         &_project{
             padding: 30px 20px;
