--- a/src/css/item/_slider.scss
+++ b/src/css/item/_slider.scss
@@ -14,6 +14,7 @@
         z-index: 11;
         border: 1px solid $light-grey;
         padding: 8px;
+        transition: .4s;
 
         &.slick-prev{
             border-radius: 30px 0 0 30px;
@@ -29,6 +30,10 @@
             &:before{
                 content:'';
             }
+        }
+
+        &:hover{
+            opacity: .8;
         }
     }
     &_logo{
